--- a/views/news.handlebars
+++ b/views/news.handlebars
@@ -1,6 +1,6 @@
 <h1>News</h1>
-<a href="">Filter</a>
-<div>
+<a href="" class="tickets-button">Filter</a>
+<div class="news">
   <div>
     <img src="" alt="" />
     <h3>Medical Report: Stéphane Charlin fällt 6-8 Wochen aus</h3>
@@ -27,8 +27,11 @@
     <h3>Schläglerei artet aus. Matthias Muster wurde dreimal die Nase gebrochen.</h3>
   </div>
 </div>
-<ul>
-  <li><a href="/news2.handlebars">1</a></li>
-  <li><a href="">2</a></li>
-  <li><a href="">3</a></li>
-</ul>
+
+<div class="breadcrumbs-nav">
+  <ul>
+    <li><a href="/news.handlebars">1</a></li>
+    <li><a href="/news2.handlebars">2</a></li>
+    <li><a href="">3</a></li>
+  </ul>
+</div>
