--- a/views/start.handlebars
+++ b/views/start.handlebars
@@ -1,4 +1,3 @@
-
 <!-- START --------------------------------------------->
 <div class="START">
 
@@ -21,15 +20,16 @@
     </div>
   </div>
   <p><a href="spielplan.handlebars">zum Spielplan</a></p>
-  <a href="tickets.handlebars" class="button">Tickets</a>
+  <a href="tickets.handlebars" class="tickets-button">Tickets</a>
 
 </div>
 
 
 
 <!-- NEWS --------------------------------------------->
-<div class="NEWS">
+<div>
   <h1>News</h1>
+<div class="news">
   <div>
     <div>
       <img src="" alt="" />
@@ -50,10 +50,97 @@
     </div>
   <a href="news.handlebars" class="button">Mehr</a>
 </div>
-
+</div>
 
 
 <!-- SOCIAL WALL --------------------------------------------->
-<div class="Social Wall">
+<h1> Social Wall</h1>
+<div class="Social-Wall">
+<div class="social-wall-box">
+  <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
+  <h4>Datum</h4>
+  <h2>Märit</h2>
+  <h3>Am Mittwoch, 26. Februar, ist wieder Langnau-Märit! 
+    Ihr findet unseren Stand aber nicht am Märit selber, sondern in der Emmetal Versicherung Arena: Der Fanshop ist von 11:00 bis 16:00 Uhr geöffnet.#chömetvrbi #mirfreueüs #ämmitauermärit
+    </h3>
+    <i class="fa-solid fa-heart" style="color: #484848;"></i>
+    <i class="fa-solid fa-comment" style="color: #484848;"></i>
+    <i class="fa-solid fa-share-nodes" style="color: #484848;"></i>
+</div>
+<div class="social-wall-box">
+  <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
+  <h4>Datum</h4>
+  <h2>Video</h2>
+  <h3>Dario Allpenspach - Best Player #därudubischnä #vidöli 
+    </h3>
+    <i class="fa-solid fa-heart" style="color: #484848;"></i>
+    <i class="fa-solid fa-comment" style="color: #484848;"></i>
+    <i class="fa-solid fa-share-nodes" style="color: #484848;"></i>
+</div>
+<div class="social-wall-box">
+  <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
+  <h4>Datum</h4>
+  <h2>Schlägerei</h2>
+  <h3>Beim Letzten Spiel gegen die Bieler kam es zu einer heftigen Schlägerei.#üsduetsleid #dsischunfair
 
+    </h3>
+    <i class="fa-solid fa-heart" style="color: #484848;"></i>
+    <i class="fa-solid fa-comment" style="color: #484848;"></i>
+    <i class="fa-solid fa-share-nodes" style="color: #484848;"></i>
+</div>
+<div class="social-wall-box">
+  <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
+  <h4>Datum</h4>
+  <h2>Schlägerei</h2>
+  <h3>Beim Letzten Spiel gegen die Bieler kam es zu einer heftigen Schlägerei.#üsduetsleid #dsischunfair
+
+    </h3>
+    <i class="fa-solid fa-heart" style="color: #484848;"></i>
+    <i class="fa-solid fa-comment" style="color: #484848;"></i>
+    <i class="fa-solid fa-share-nodes" style="color: #484848;"></i>
+</div>
+<div class="social-wall-box">
+  <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
+  <h4>Datum</h4>
+  <h2>Schlägerei</h2>
+  <h3>Beim Letzten Spiel gegen die Bieler kam es zu einer heftigen Schlägerei.#üsduetsleid #dsischunfair
+
+    </h3>
+    <i class="fa-solid fa-heart" style="color: #484848;"></i>
+    <i class="fa-solid fa-comment" style="color: #484848;"></i>
+    <i class="fa-solid fa-share-nodes" style="color: #484848;"></i>
+</div>
+<div class="social-wall-box">
+  <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
+  <h4>Datum</h4>
+  <h2>Schlägerei</h2>
+  <h3>Beim Letzten Spiel gegen die Bieler kam es zu einer heftigen Schlägerei.#üsduetsleid #dsischunfair
+
+    </h3>
+    <i class="fa-solid fa-heart" style="color: #484848;"></i>
+    <i class="fa-solid fa-comment" style="color: #484848;"></i>
+    <i class="fa-solid fa-share-nodes" style="color: #484848;"></i>
+</div>
+<div class="social-wall-box">
+  <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
+  <h4>Datum</h4>
+  <h2>Schlägerei</h2>
+  <h3>Beim Letzten Spiel gegen die Bieler kam es zu einer heftigen Schlägerei.#üsduetsleid #dsischunfair
+
+    </h3>
+    <i class="fa-solid fa-heart" style="color: #484848;"></i>
+    <i class="fa-solid fa-comment" style="color: #484848;"></i>
+    <i class="fa-solid fa-share-nodes" style="color: #484848;"></i>
+</div>
+<div class="social-wall-box">
+  <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
+  <h4>Datum</h4>
+  <h2>Schlägerei</h2>
+  <h3>Beim Letzten Spiel gegen die Bieler kam es zu einer heftigen Schlägerei.#üsduetsleid #dsischunfair
+
+    </h3>
+    <i class="fa-solid fa-heart" style="color: #484848;"></i>
+    <i class="fa-solid fa-comment" style="color: #484848;"></i>
+    <i class="fa-solid fa-share-nodes" style="color: #484848;"></i>
+</div>
 </div>
