--- a/views/tickets.handlebars
+++ b/views/tickets.handlebars
@@ -1,15 +1,75 @@
 <h1>Einzeltickets</h1>
+
 <a
   href="https://www.ticketmaster.ch/artist/scl-tigers-tickets/1036082?brand=scltigers"
+  class="tickets-button"
 >Ticketmaster</a>
-<a href="https://www.scltigers.ch/faq/">FAQ</a>
-<a href="https://www.scltigers.ch/agb/">AGB</a>
+<a href="https://www.scltigers.ch/faq/" class="tickets-button">FAQ</a>
+<a href="https://www.scltigers.ch/agb/" class="tickets-button">AGB</a>
 
-<h2>Preise Einzeltickets</h2>
-<h2>Family-Corner</h2>
-<h2>Sektorenplan</h2>
+<div class="tickets">
+  <div>
+    <h2>Preise Einzeltickets</h2>
+    <img src="/uploads/SCL-Tigers_Sektorenplan_2425-1024x697.png" alt="" />
+  </div>
 
-<div>
-  <h2>Allgemeine Matchinfos</h2>
-  <h3>Kinder</h3>
+  <div class="tickets-right">
+    <div>
+      <h2>Family-Corner</h2>
+      <h3>pro Person 1x
+        <i class="fa-solid fa-burger" style="color: #000000;"></i>
+        + alkoholfreies Getränk
+        <i class="fa-solid fa-whiskey-glass" style="color: #000000;"></i>
+        nach Wahl im Tigersaal (Selbstbedienung).
+      </h3>
+      <p>*Das Ticket zum Preis von Fr. 100.– ist gültig für eine vierköpfige
+        Familie (2 Erwachsene + 2 Kinder oder 1 Erwachsener + 3 Kinder).</p>
+    </div>
+
+    <div>
+      <h2>Sektorenplan</h2>
+      <img src="/uploads/SCL-Tigers_Sektorenplan_2425-1024x697.png" alt="" />
+      <i class="fa-solid fa-file-arrow-down" style="color: #ed1c24;"><a
+          href="https://www.scltigers.ch/wp-content/uploads/20240412_SCL_SaalplanSK_2425_Platzgenau.pdf"
+        ></a>
+        <h5>Saalplan Platz genau</h5></i>
+      <i class="fa-solid fa-file-arrow-down" style="color: #ed1c24;"><a
+          href="https://www.scltigers.ch/wp-content/uploads/SCL_Saalplan2425_Sektoren.pdf"
+        ></a>
+        <h5>Saalplan Übersicht</h5></i>
+    </div>
+
+    <div>
+      <h2>Allgemeine Matchinfos</h2>
+      <h3>Kinder</h3>
+      <p>Kinder bis 6 Jahre haben freien Eintritt in Begleitung eines
+        Erwachsenen. Die Kinder haben jedoch KEINEN Anspruch auf einen separaten
+        Sitzplatz. (Stichtag ist der 7. Geburtstag). Als Kinder gelten
+        Matchbesucher ab 7 Jahren bis zum vollendeten 15. Lebensjahr. Ab dem 16.
+        Geburtstag ist ein Ticket für Erwachsene zu beziehen. Eltern haften für
+        ihre Kinder.</p>
+      <h3>Rollstuhlfahrer/-innen und Begleitpersonen auf der Plattform Lebensart</h3>
+      <p>Rollstuhlplätze (pro Rollstuhlplatz zusätzlich max. 2 Begleitpersonen)
+        und Begleitpersonen auf der Plattform Lebensart sind über die SCL Tigers
+        Geschäftsstelle zu reservieren, +41 34 408 35 35
+        / ticketing@scltigers.ch.</p>
+      <h3>Öffentlicher Verkehr</h3>
+      <p>Bitte beachten Sie, dass das Match-Ticket NICHT als Fahrausweis für die
+        öffentlichen Verkehrsmittel gilt. Für die Anreise mit öffentlichen
+        Verkehrsmitteln gelten die normalen Tarife (Info Anfahrt).</p>
+      <h3>Kühni Träff</h3>
+      <p>Der Kühni Träff ist ab 17.45 geöffnet, zutritt aber nur mit einem
+        gültigen Matchticket. Ab dem 3. Drittel ist der Zugang für alle
+        geöffnet.</p>
+      <h3>Neues Einlasskonzept & Ausweiskontrolle</h3>
+      <p>Für Heimspiele steht nur noch ein Haupteingang zum Areal zur Verfügung
+        (siehe Plan). Die gesamte emmental versicherung arena wird an Spieltagen
+        umzäunt und der Einlass wurde auf den Vorplatz vorverlagert. Zudem wird
+        beim Eingang bei allen reduzierten Tickets – Lernende, Studenten, AHV,
+        und Kinder bis 16 J. – eine Ausweiskontrolle mittels Identitätskarte,
+        Pass oder Führerausweis durchgeführt. Wir bitten alle Fans, frühzeitig
+        anzureisen, um Verzögerungen zu vermeiden.</p>
+
+    </div>
+  </div>
 </div>
