Startseite Header erstellt, Normale Header erstellt

--- a/views/aboutus.handlebars
+++ b/views/aboutus.handlebars
@@ -1,1 +1,5 @@
+<!-- SHORT HEADER --------------------------------------------->
+
+{{> shortHeader}}
+
 <h1>Diese Seite ist momentan noch in Bearbeitung</h1>
