--- a/views/impressum.handlebars
+++ b/views/impressum.handlebars
@@ -1,3 +1,8 @@
+<!-- SHORT HEADER --------------------------------------------->
+
+{{> shortHeader}}
+
+
 &copy; 2024 BBZ Biel
 
 <h2>Urheberrecht</h2>
