--- a/views/start.handlebars
+++ b/views/start.handlebars
@@ -1,5 +1,11 @@
+<!-- LONG HEADER --------------------------------------------->
+
+{{> longHeader}}
+
+
+
 <!-- START --------------------------------------------->
-<div class="START">
+  <div class="START">
 
   <h1>Nächste Spiele</h1>
   <div class="Nächste-Spiele">
