--- a/public/style.css
+++ b/public/style.css
@@ -63,6 +63,54 @@ header div a {
   padding-left: 40px;
 }
 
+/*Bilder gestaltet */
+/*Logo */
+.Logo {
+  width: 70px;
+}
+
+
+/********************
+
+/*Bild Startseite (long-header)*/
+.longHeader{
+  position: relative;
+  background-image: url('/uploads/2025-03-01-Tigers-Ajoie_news.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100vw;
+  z-index: 0; /* Wichtig für Schichten */
+}
+
+/* Overlay */
+.longHeader::before {
+  content: "";
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6); /* Hier kannst du die Dunkelheit anpassen */
+  z-index: 1;
+}
+
+/* Damit Inhalt (Navigation usw.) über dem Overlay liegt */
+.longHeader .header {
+  position: relative;
+  z-index: 2;
+}
+
+
+/********************
+
+/*Bild normal */
+
+
+
+/********************
+
+
 /*****************************************************************
 
 /*Links********************************************************/
