--- a/views/news.handlebars
+++ b/views/news.handlebars
@@ -1,3 +1,8 @@
+<!-- SHORT HEADER --------------------------------------------->
+
+{{> shortHeader}}
+
+
 <h1>News</h1>
 <a href="" class="tickets-button">Filter</a>
 <div class="news">
