--- a/views/spielplan.handlebars
+++ b/views/spielplan.handlebars
@@ -1,1 +1,5 @@
+<!-- SHORT HEADER --------------------------------------------->
+
+{{> shortHeader}}
+
 <h1>Diese Seite ist momentan noch in Bearbeitung</h1>
