--- a/views/partials/longHeader.handlebars
+++ b/views/partials/longHeader.handlebars
@@ -1,14 +1,42 @@
-<header class ="longHeader">
+<header class="longHeader">
 
-      <div class="header">
-        <a href="/"><img class="Logo" src="/uploads/Logo_SCL_Tigers.svg.png" alt="SCL Tigers Logo"
-          /></a>
-        <a href="/">Home</a>
-        <a href="/news" class="">News</a>
-        <a href="/spielplan">Spielplan</a>
-        <a href="/tickets">Tickets</a>
-        <a href="/aboutus">Über uns</a>
-        <a href="/stadion">Stadion</a>
-        <a href="/sclyoungtigers">SCL Young Tigers</a>
+  <div class="header">
+    <a href="/"><img
+        class="Logo"
+        src="/uploads/Logo_SCL_Tigers.svg.png"
+        alt="SCL Tigers Logo"
+      /></a>
+    <a href="/">Home</a>
+    <a href="/news" class="">News</a>
+    <a href="/spielplan">Spielplan</a>
+    <a href="/tickets">Tickets</a>
+    <a href="/aboutus">Über uns</a>
+    <a href="/stadion">Stadion</a>
+    <a href="/sclyoungtigers">SCL Young Tigers</a>
+  </div>
+
+  <div class="spielplanWrapper">
+    <h1>Nächste Spiele</h1>
+    <div class="tabelle">
+      <div class="Reihe">
+        <p>14.02.2025</p>
+        <p>19:45</p>
+        <p>SCL Tigers vs. HC Ambri-Piotta</p>
       </div>
-    </header>
+      <div class="Reihe">
+        <p>15.02.2025</p>
+        <p>19:45</p>
+        <p>Genève-Servette HC vs. SCL Tigers</p>
+      </div>
+      <div class="Reihe">
+        <p>22.02.2025</p>
+        <p>19:45</p>
+        <p>SCL Tigers vs. EHC Kloten</p>
+      </div>
+
+    </div>
+    <a href="/spielplan">Zum Spielplan</a>
+    <a href="tickets.handlebars" class="tickets-button">Tickets</a>
+  </div>
+
+</header>
