--- a/views/partials/shortHeader.handlebars
+++ b/views/partials/shortHeader.handlebars
@@ -1,18 +1,22 @@
-<header class ="background-image"
-      style="background-image: url('/uploads/2025-03-01-Tigers-Ajoie_news.jpg');
+<header
+  class="background-image"
+  style="background-image: url('/uploads/2025-03-01-Tigers-Ajoie_news.jpg');
   background-size: cover; 
   background-position: center;
   background-repeat: no-repeat;"
-    >
-      <div class="header">
-        <a href="/"><img class="Logo" src="/uploads/Logo_SCL_Tigers.svg.png" alt="SCL Tigers Logo"
-          /></a>
-        <a href="/">Home</a>
-        <a href="/news" class="">News</a>
-        <a href="/spielplan">Spielplan</a>
-        <a href="/tickets">Tickets</a>
-        <a href="/aboutus">Über uns</a>
-        <a href="/stadion">Stadion</a>
-        <a href="/sclyoungtigers">SCL Young Tigers</a>
-      </div>
-    </header>
+>
+  <div class="header">
+    <a href="/"><img
+        class="Logo"
+        src="/uploads/Logo_SCL_Tigers.svg.png"
+        alt="SCL Tigers Logo"
+      /></a>
+    <a href="/">Home</a>
+    <a href="/news" class="">News</a>
+    <a href="/spielplan">Spielplan</a>
+    <a href="/tickets">Tickets</a>
+    <a href="/aboutus">Über uns</a>
+    <a href="/stadion">Stadion</a>
+    <a href="/sclyoungtigers">SCL Young Tigers</a>
+  </div>
+</header>
