--- a/views/spielplan.handlebars
+++ b/views/spielplan.handlebars
@@ -2,4 +2,75 @@
 
 {{> shortHeader}}
 
-<h1>Diese Seite ist momentan noch in Bearbeitung</h1>
+<main>
+<h1>Spielplan</h1>
+
+
+    <table class="styled-table">
+        <thead>
+          <tr>
+            <th>Datum</th>
+            <th>Zeit</th>
+            <th>Match</th>
+            <th>Resultat</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>13.3.2025</td>
+            <td>20.00 Uhr</td>
+            <td>LAUSANNE HC – SCL TIGERS</td>
+            <td>4:3</td>
+          </tr>
+          <tr>
+            <td>15.3.2025</td>
+            <td>20.00 Uhr</td>
+            <td>SCL TIGERS – LAUSANNE HC</td>
+            <td>4:3</td>
+          </tr>
+          <tr>
+            <td>17.3.2025</td>
+            <td>20.00 Uhr</td>
+            <td>LAUSANNE HC – SCL TIGERS</td>
+            <td>4:2</td>
+          </tr>
+          <tr>
+            <td>19.3.2025</td>
+            <td>20.00 Uhr</td>
+            <td>SCL TIGERS – LAUSANNE HC</td>
+            <td>3:2</td>
+          </tr>
+          <tr>
+            <td>21.03.2025</td>
+            <td>20.00 Uhr</td>
+            <td>LAUSANNE HC – SCL TIGERS</td>
+            <td> 4:1</td>
+        </tr>
+        <tr>
+            <td>23.03.2025</td>
+            <td>20.00 Uhr</td>
+            <td>SCL TIGERS – LAUSANNE HC</td>
+            <td>3:2</td>
+        </tr>
+        <tr>
+            <td>25.03.2025</td>
+            <td>20.00 Uhr</td>
+            <td>LAUSANNE HC – SCL TIGERS</td>
+            <td>6:2</td>
+        </tr>
+        </tbody>
+      </table>
+    
+
+<h3>Hier geht’s zum Import des Spielplans in <a href="https://www.sihf.ch/de/game-center/national-league/#/results/date/asc/page/0/2025/all/17.09.2024-01.03.2025//102127/all">Outlook, iCal und Google Kalender!</a> Der Spielplan im SIHF Game Center sollte in den nächsten Tagen aktualisiert werden.</h3>
+
+
+<div>
+    <h5><i class="fa-solid fa-file-arrow-down" style="color: #ed1c24;"><a
+        href="https://www.scltigers.ch/wp-content/uploads/Spielplan_Tigers_2024-25_21.01.2025.pdf"></a></i>Spielplan Tigers - Qualifikation (PDF)</h5>
+
+<h5><i class="fa-solid fa-file-arrow-down" style="color: #ed1c24;">
+
+<a href="https://www.scltigers.ch/wp-content/uploads/Spielplan_NL_2024_2025.pdf"></a></i>Modus und Spielplan National League</h5>
+</div>
+</main>
