--- a/views/tickets.handlebars
+++ b/views/tickets.handlebars
@@ -1,6 +1,7 @@
 <!-- SHORT HEADER --------------------------------------------->
 
 {{> shortHeader}}
+<main>
 
 <h1>Einzeltickets</h1>
 
@@ -15,17 +16,122 @@
   <div>
     <h2>Preise Einzeltickets</h2>
     <img src="/uploads/SCL-Tigers_Sektorenplan_2425-1024x697.png" alt="" />
+  
+  <table>
+    <thead>
+      <tr> </tr>
+      <tr>Sektor</tr>
+      <tr>Platz</tr>
+      <tr>Preise*</tr>
+    </thead>
+    <tr>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td>Jakob Galerie</td>
+      <td>Sitzplatz</td>
+      <td>160.–</td>
+    </tr>
+    <tr>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td>Jakob Galerie</td>
+      <td>Stehplatz</td>
+      <td>100.–</td>
+    </tr>
+    <tr>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td>Ost-Tribüne</td>
+      <td>Sitzplatz</td>
+      <td>82.–</td>
+    </tr>
+    <tr>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td>Ost-Tribüne</td>
+      <td>Anlehnsteh</td>
+      <td>62.–</td>
+    </tr>
+    <tr>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td>Ost-Tribüne</td>
+      <td>Stehplatz</td>
+      <td>57.–</td>
+    </tr>
+    <tr>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td>GLB-Tribüne</td>
+      <td>Sitzplatz</td>
+      <td>100.–</td>
+    </tr>
+    <tr>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td>GLB-Tribüne</td>
+      <td>Stehplatz</td>
+      <td>62.–</td>
+    </tr>
+    <tr>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td>C,D,E</td>
+      <td>Sitzplatz</td>
+      <td>62.–</td>
+    </tr>
+    <tr>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td>B,F,H,I,K</td>
+      <td>Sitzplatz</td>
+      <td>62.–</td>
+    </tr>
+    <tr>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td>B,C,D,E,L</td>
+      <td>Sitzplatz</td>
+      <td>57.–</td>
+    </tr>
+    <tr>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td>C,D,E,F</td>
+      <td>Sitzplatz</td>
+      <td>52.–</td>
+    </tr>
+    <tr>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td>A,G,M,N,O</td>
+      <td>Sitzplatz</td>
+      <td>48.–</td>
+    </tr>
+    <tr>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td>F</td>
+      <td>Sitzplatz</td>
+      <td>43.–</td>
+    </tr>
+    <tr>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td>Erwachsene</td>
+      <td>Stehplatz</td>
+      <td>25.–</td>
+      <tr>
+        <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+        <td>Kinder bis 16 J.</td>
+        <td>Stehplatz</td>
+        <td>14.–</td></tr>
+    </tr>
+    <tr>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td>Rollstuhl</td>
+      <td>Stehplatz</td>
+      <td>25.–</td>
+    </tr>
+  </table>
+  <h5>*alle Preise inkl. 2.6% MWST (Stand. 1. Mai 2024)</h5>
   </div>
 
   <div class="tickets-right">
     <div>
       <h2>Family-Corner</h2>
-      <h3>pro Person 1x
+      <h4>pro Person 1x
         <i class="fa-solid fa-burger" style="color: #000000;"></i>
         + alkoholfreies Getränk
         <i class="fa-solid fa-whiskey-glass" style="color: #000000;"></i>
         nach Wahl im Tigersaal (Selbstbedienung).
-      </h3>
+      </h4>
       <p>*Das Ticket zum Preis von Fr. 100.– ist gültig für eine vierköpfige
         Familie (2 Erwachsene + 2 Kinder oder 1 Erwachsener + 3 Kinder).</p>
     </div>
@@ -77,3 +183,5 @@
     </div>
   </div>
 </div>
+
+</main>
