--- a/views/aboutus.handlebars
+++ b/views/aboutus.handlebars
@@ -2,4 +2,8 @@
 
 {{> shortHeader}}
 
-<h1>Diese Seite ist momentan noch in Bearbeitung</h1>
+<main>
+<h1>Über uns</h1>
+<h2>Team</h2>
+<h2>Facts</h2>
+</main>
