--- a/views/news.handlebars
+++ b/views/news.handlebars
@@ -1,7 +1,7 @@
 <!-- SHORT HEADER --------------------------------------------->
 
 {{> shortHeader}}
-
+<main>
 
 <h1>News</h1>
 <a href="" class="tickets-button">Filter</a>
@@ -40,3 +40,5 @@
     <li><a href="">3</a></li>
   </ul>
 </div>
+
+</main>
