--- a/views/start.handlebars
+++ b/views/start.handlebars
@@ -3,7 +3,7 @@
 {{> longHeader}}
 
 
-
+<main>
 <!-- START --------------------------------------------->
   <div class="START">
 
@@ -150,3 +150,4 @@
     <i class="fa-solid fa-share-nodes" style="color: #484848;"></i>
 </div>
 </div>
+</main>
