Header, tickets finish

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,10 @@
     {{{body}}}
 
     <footer>
-      <h5>Kontakt</h5>
+
+      <h5>Kontakt</h5><p>
+        <a href="/page">Erklärungsseite</a></p>
+      <p> <a href="/impressum">Impressum</a></p>
       <div class="adressblock">
         <p>SCL Tigers AG</p>
         <p>Güterstrasse 18</p>
