--- a/views/partials/longHeader.handlebars
+++ b/views/partials/longHeader.handlebars
@@ -6,7 +6,7 @@
         src="/uploads/Logo_SCL_Tigers.svg.png"
         alt="SCL Tigers Logo"
       /></a>
-    <a href="/">Home</a>
+    <a class="Home" href="/">Home</a>
     <a href="/news" class="">News</a>
     <a href="/spielplan">Spielplan</a>
     <a href="/tickets">Tickets</a>
@@ -35,7 +35,7 @@
       </div>
 
     </div>
-    <a href="/spielplan">Zum Spielplan</a>
+    <a class="Spielplan-Home" href="/spielplan">Zum Spielplan</a>
     <a href="tickets.handlebars" class="tickets-button">Tickets</a>
   </div>
 
