--- a/views/tickets.handlebars
+++ b/views/tickets.handlebars
@@ -13,17 +13,16 @@
 <a href="https://www.scltigers.ch/agb/" class="tickets-button">AGB</a>
 
 <div class="tickets">
-  <div>
-    <h2>Preise Einzeltickets</h2>
-    <img src="/uploads/SCL-Tigers_Sektorenplan_2425-1024x697.png" alt="" />
-  
+  <div class="tickets-left">
+    <h2 class="price-h2">Preise Einzeltickets</h2>
+    <img src="/uploads/SCL-Tigers_Sektorenplan_2425-1024x697.png" alt="" class="sectorplan"/>
   <table>
-    <thead>
-      <tr> </tr>
-      <tr>Sektor</tr>
-      <tr>Platz</tr>
-      <tr>Preise*</tr>
-    </thead>
+  <thead>
+      <td class="title-table">Sektor</td>
+      <td class="title-table"> </td>
+      <td class="title-table">Platz</td>
+      <td class="title-table">Preise*</td>
+  </thead>
     <tr>
       <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
       <td>Jakob Galerie</td>
@@ -37,84 +36,84 @@
       <td>100.–</td>
     </tr>
     <tr>
-      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #326EFF"></i></td>
       <td>Ost-Tribüne</td>
       <td>Sitzplatz</td>
       <td>82.–</td>
     </tr>
     <tr>
-      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #326EFF"></i></td>
       <td>Ost-Tribüne</td>
       <td>Anlehnsteh</td>
       <td>62.–</td>
     </tr>
     <tr>
-      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #326EFF"></i></td>
       <td>Ost-Tribüne</td>
       <td>Stehplatz</td>
       <td>57.–</td>
     </tr>
     <tr>
-      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #B94EE4"></i></td>
       <td>GLB-Tribüne</td>
       <td>Sitzplatz</td>
       <td>100.–</td>
     </tr>
     <tr>
-      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #B94EE4"></i></td>
       <td>GLB-Tribüne</td>
       <td>Stehplatz</td>
       <td>62.–</td>
     </tr>
     <tr>
-      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #FF001B"></i></td>
       <td>C,D,E</td>
       <td>Sitzplatz</td>
       <td>62.–</td>
     </tr>
     <tr>
-      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #162DE5"></i></td>
       <td>B,F,H,I,K</td>
       <td>Sitzplatz</td>
       <td>62.–</td>
     </tr>
     <tr>
-      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #FFC600"></i></td>
       <td>B,C,D,E,L</td>
       <td>Sitzplatz</td>
       <td>57.–</td>
     </tr>
     <tr>
-      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #F600CD"></i></td>
       <td>C,D,E,F</td>
       <td>Sitzplatz</td>
       <td>52.–</td>
     </tr>
     <tr>
-      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #007867"></i></td>
       <td>A,G,M,N,O</td>
       <td>Sitzplatz</td>
       <td>48.–</td>
     </tr>
     <tr>
-      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #A60000"></i></td>
       <td>F</td>
       <td>Sitzplatz</td>
       <td>43.–</td>
     </tr>
     <tr>
-      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #AD7E00"></i></td>
       <td>Erwachsene</td>
       <td>Stehplatz</td>
       <td>25.–</td>
       <tr>
-        <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+        <td><i class="fa-sharp fa-solid fa-square" style="color: #AD7E00"></i></td>
         <td>Kinder bis 16 J.</td>
         <td>Stehplatz</td>
         <td>14.–</td></tr>
     </tr>
     <tr>
-      <td><i class="fa-sharp fa-solid fa-square" style="color: #00B1FF"></i></td>
+      <td><i class="fa-sharp fa-solid fa-square" style="color: #0074A1"></i></td>
       <td>Rollstuhl</td>
       <td>Stehplatz</td>
       <td>25.–</td>
@@ -126,29 +125,37 @@
   <div class="tickets-right">
     <div>
       <h2>Family-Corner</h2>
-      <h4>pro Person 1x
+      <table>
+        <thead>
+            <td class="title-table"> </td>
+            <td class="title-table"> </td>
+            <td class="title-table">Platz</td>
+            <td class="title-table">Preise*</td>
+        </thead>
+          <tr>
+            <td>Vierköpfige Familie</td>
+            <td>Sitzplatz</td>
+            <td>100.–</td>
+          </tr>
+        </table>
+      <h5>pro Person 1x
         <i class="fa-solid fa-burger" style="color: #000000;"></i>
         + alkoholfreies Getränk
         <i class="fa-solid fa-whiskey-glass" style="color: #000000;"></i>
         nach Wahl im Tigersaal (Selbstbedienung).
-      </h4>
+      </h5>
       <p>*Das Ticket zum Preis von Fr. 100.– ist gültig für eine vierköpfige
         Familie (2 Erwachsene + 2 Kinder oder 1 Erwachsener + 3 Kinder).</p>
     </div>
+    <h2>Sektorenplan</h2>
+    <img src="/uploads/SCL-Tigers_Sektorenplan_2425-1024x697.png" alt="" />
 
-    <div>
-      <h2>Sektorenplan</h2>
-      <img src="/uploads/SCL-Tigers_Sektorenplan_2425-1024x697.png" alt="" />
-      <i class="fa-solid fa-file-arrow-down" style="color: #ed1c24;"><a
-          href="https://www.scltigers.ch/wp-content/uploads/20240412_SCL_SaalplanSK_2425_Platzgenau.pdf"
-        ></a>
-        <h5>Saalplan Platz genau</h5></i>
-      <i class="fa-solid fa-file-arrow-down" style="color: #ed1c24;"><a
-          href="https://www.scltigers.ch/wp-content/uploads/SCL_Saalplan2425_Sektoren.pdf"
-        ></a>
-        <h5>Saalplan Übersicht</h5></i>
+    <div class="sectors">
+      <a href="https://www.scltigers.ch/wp-content/uploads/20240412_SCL_SaalplanSK_2425_Platzgenau.pdf"
+        ><i class="fa-solid fa-file-arrow-down" style="color: #ed1c24;"></i><h5>Saalplan Platz genau</h5></a>
+        <a href="https://www.scltigers.ch/wp-content/uploads/SCL_Saalplan2425_Sektoren.pdf"
+        ><i class="fa-solid fa-file-arrow-down" style="color: #ed1c24;"></i><h5>Saalplan Übersicht</h5></a>
     </div>
-
     <div>
       <h2>Allgemeine Matchinfos</h2>
       <h3>Kinder</h3>
