--- a/public/style.css
+++ b/public/style.css
@@ -6,9 +6,9 @@
 
 /*Main = Body ohne Header und ohne Footer*/
 main {
-  margin-left: 10%;
-  margin-top: 10%;
-  margin-right: 10%;
+  margin-left: 7%;
+  margin-top: 7%;
+  margin-right: 7%;
   margin-bottom: 5%;
   flex: 1;
 }
@@ -75,17 +75,28 @@ header div a {
 
 
 
-
+/* Start */
+.Social-Wall {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  width: 70vw;
+}
 
 
 /*Bild Startseite (long-header)*/
+.home {
+  color: var(--yellow);
+}
+.home:hover {
+  color: var(--yellow);
+}
 .longHeader{
   position: relative;
   background-image: url('/uploads/Teamfoto.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 130vh;
+  height: 100vh;
   width: 100vw;
   z-index: 0; /* Wichtig für Schichten */
 }
@@ -109,14 +120,28 @@ header div a {
   align-items: flex-start; /* sorgt für linke Ausrichtung */
 }
 
+.tabelle {
+  margin-bottom: 40px;
+}
+
+
 .Reihe p{
   margin-right: 15%;
+  white-space: nowrap;
+  
 }
 .Reihe:hover {
   color: var(--yellow);
 }
 
+.Spielplan-Home {
+  margin-bottom: 40px;
+  margin-left: 0;
+}
 
+.Spielplan-Home:hover {
+ color: var(--yellow);
+}
 
 /* Damit Inhalt (Navigation usw.) über dem Overlay liegt */
 .longHeader .header {
@@ -187,25 +212,38 @@ margin-top: 10px;
 
 /*allgemeine Fonts**********************************************************/
 h1 {
-  margin-top: 10px;
+  /*margin-top: 20px; */
   font-size: 64px;
   font-weight: 500;
+  margin-bottom: 10px;
 }
 
 h2 {
   font-size: 32px;
   font-weight: 300;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   margin-top: 20px;
 }
 
 p {
   font-size: 16px;
   font-weight: 200;
-  margin-top: 20px;
+  margin-top: 5px;
+  margin-bottom: 15px;
 }
 
 
+
+h5 {
+  font-size: 20px;
+  font-weight: 200;
+  margin-top: 15px;
+}
+
+td {
+  font-size: 20px;
+  font-weight: 200;
+}
 
 
 /***************************************************************
@@ -383,6 +421,7 @@ div.Social-Wall {
 /*Tickets****************************************/
 .tickets {
   display: grid;
+  width: 80vw;
   grid-template-columns: repeat(2, 1fr); /* 2 Spalten */
   gap: 20px; /* Mehr Abstand zwischen den Elementen */
 }
@@ -390,33 +429,66 @@ div.Social-Wall {
 .tickets-button {
   background-color: var(--red);
   color: var(--yellow);
-  padding: 2vw;
+  padding: 20px;
+  margin-top: 120px;
+  margin-bottom: 120px;
+}
+.tickets-left {
+  display: flex;
+  flex-direction: column;
+  padding-top: 20px;
+} 
+.tickets-right {
+  padding-top: 20px;
+}
+.points-tabel {
+  display: flexbox;
+  flex-direction: column;
+}
+.sectorplan {
+  padding-top: 50px;
+}
+.title-table {
+  font-size: 24px;
+  color: var(--black);
+  font-weight: 700;
+}
+
+table {
+  margin-top: 40px;
 }
 /*Footer**********************************************************/
 footer {
   position:relative;
   bottom: 1%;
-  border-top: 1px solid #9C9C9C; /* 2px dicker schwarzer Border */
-  padding: 10px;             /* Abstand im Footer-Inhalt */
+  border-top: 1px solid #9C9C9C; /* 2px dicker schwarzer Border */            /* Abstand im Footer-Inhalt */
   margin-top: 60px;
   background-color: var(--darkgrey);
   color: var(--white);
+padding: 10%;
 }
 
 footer h5 {
   font-size: 22px;
   font-weight: 600;
-  margin-left: 20px;
   margin-top: 10px;
 }
 
 
-footer h5:hover {
-  color: var(--green)
+
+#email {
+  margin-bottom: 30px;
+  margin-top: 0;
 }
 
-footer a {
-  margin-left: 20px;
-  margin-bottom: 10px;
+.adressblock p{
+  line-height: 1px;
 }
+.adressblock {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+
+
 /*****************************************************************
