--- a/views/partials/shortHeader.handlebars
+++ b/views/partials/shortHeader.handlebars
@@ -1,6 +1,6 @@
 <header
   class="background-image"
-  style="background-image: url('/uploads/2025-03-01-Tigers-Ajoie_news.jpg');
+  style="background-image: url('/uploads/Teamfoto.png');
   background-size: cover; 
   background-position: center;
   background-repeat: no-repeat;"
