--- a/views/news.handlebars
+++ b/views/news.handlebars
@@ -7,7 +7,7 @@
 <a href="" class="tickets-button">Filter</a>
 <div class="news">
   <div>
-    <img src="" alt="" />
+    <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
     <h3>Medical Report: Stéphane Charlin fällt 6-8 Wochen aus</h3>
   </div>
   <div>
