--- a/views/partials/longHeader.handlebars
+++ b/views/partials/longHeader.handlebars
@@ -18,25 +18,29 @@
   <div class="spielplanWrapper">
     <h1>Nächste Spiele</h1>
     <div class="tabelle">
-      <div class="Reihe">
-        <p>14.02.2025</p>
-        <p>19:45</p>
-        <p>SCL Tigers vs. HC Ambri-Piotta</p>
-      </div>
-      <div class="Reihe">
-        <p>15.02.2025</p>
-        <p>19:45</p>
-        <p>Genève-Servette HC vs. SCL Tigers</p>
-      </div>
-      <div class="Reihe">
-        <p>22.02.2025</p>
-        <p>19:45</p>
-        <p>SCL Tigers vs. EHC Kloten</p>
-      </div>
-
+      <table>
+        <tr>
+          <td class="start-gameplan">14.2.2025</td>
+          <td class="start-gameplan">19.45 Uhr</td>
+          <td class="start-gameplan">SCL Tigers vs. HC Ambri-Piotta</td>
+        </tr>
+        <tr>
+          <td class="start-gameplan">15.2.2025</td>
+          <td class="start-gameplan">19.45 Uhr</td>
+          <td class="start-gameplan">Genève-Servette HC vs. SCL Tigers</td>
+        </tr>
+        <tr>
+          <td class="start-gameplan">22.2.2025</td>
+          <td class="start-gameplan">19.45 Uhr</td>
+          <td class="start-gameplan">SCL Tigers vs. EHC Kloten</td>
+        </tr>
+      </table>
     </div>
-    <a class="Spielplan-Home" href="/spielplan">Zum Spielplan</a>
-    <a href="tickets.handlebars" class="tickets-button">Tickets</a>
+    <div class="start-buttons">
+      <a href="/spielplan" class="start-button">Zum Spielplan</a>
+      <a href="/tickets" class="start-button">Tickets</a>
+    </div>
+
   </div>
 
 </header>
