--- a/views/spielplan.handlebars
+++ b/views/spielplan.handlebars
@@ -62,7 +62,7 @@
       </table>
     
 
-<h3>Hier geht’s zum Import des Spielplans in <a href="https://www.sihf.ch/de/game-center/national-league/#/results/date/asc/page/0/2025/all/17.09.2024-01.03.2025//102127/all">Outlook, iCal und Google Kalender!</a> Der Spielplan im SIHF Game Center sollte in den nächsten Tagen aktualisiert werden.</h3>
+<h3>Hier geht’s zum Import des Spielplans in <a href="https://www.sihf.ch/de/game-center/national-league/#/results/date/asc/page/0/2025/all/17.09.2024-01.03.2025//102127/all" class="gameplan">Outlook, iCal und Google Kalender!</a></h3>
 
 
 <div>
